# arks

./: ChangeLog  Makefile.am  README.md  autogen.sh  configure.ac  test-driver
Arcs/: Arcs.cpp  Arcs.h  DistanceEst.h
Arks/: Arks.cpp  Arks.h  DistanceEst.h  Makefile.am
Common/: Makefile.am  PairHash.h  StatUtil.h
Examples/: arks-make  makeTSVfile.py  pipeline_example.sh
Examples/arks_test-demo/: README.txt  runARKSdemo.sh
Examples/arks_test-demo/output/: test_reads_multiplicities.csv  test_scaffolds_c5_m50-6000_k30_r0.05_e30000_z500.tigpair_checkpoint.tsv  test_scaffolds_c5_m50-6000_k30_r0.05_e30000_z500_l5_a0.9.assembly_correspondence.tsv  test_scaffolds_c5_m50-6000_k30_r0.05_e30000_z500_l5_a0.9.gv  test_scaffolds_c5_m50-6000_k30_r0.05_e30000_z500_l5_a0.9.scaffolds  test_scaffolds_c5_m50-6000_k30_r0.05_e30000_z500_l5_a0.9.scaffolds.fa
Test/: Makefile.am  StatUtilTest.cpp
