noinst_LIBRARIES = libcommon.a

libcommon_a_CPPFLAGS = -I$(top_srcdir)

libcommon_a_SOURCES = \
	BloomFilter.cpp BloomFilter.h \
	BloomFilterInfo.cpp BloomFilterInfo.h \
	city.cc city.h citycrc.h\
	Dynamicofstream.cpp Dynamicofstream.h \
	Fcontrol.cpp Fcontrol.h \
	gzstream.C gzstream.h \
	IOUtil.h \
	MapUtil.h \
	Options.cpp Options.h \
	PairHash.h \
	ReadsProcessor.cpp ReadsProcessor.h \
	Sequence.cpp Sequence.h \
	SeqEval.h \
	SignalHandler.cpp SignalHandler.h \
	StatUtil.h \
	StringUtil.h \
	Uncompress.cpp Uncompress.h
	
